--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ package_dir =
 install_requires =
     click<=8.1.3
     ansible-runner<=2.3.2
+    Jinja2<=3.1.2
     importlib-metadata; python_version<"3.8"
 
 [options.packages.find]
