--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ package_dir =
 install_requires =
     click<=8.1.3
     ansible-runner<=2.3.3
-    Jinja2<=3.1.2
+    yaspin<=2.3.0
     prettytable<=3.8.0
     PyYAML<=6.0
     importlib-metadata; python_version<"3.8"
