--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     click<=8.1.3
     ansible-runner<=2.3.3
     Jinja2<=3.1.2
+    prettytable<=3.8.0
     importlib-metadata; python_version<"3.8"
 
 [options.packages.find]
