--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = oranda
+name = floki
 description = A Lightweight and Flexible Ansible Command Line Tool.
 author = Clivern
 author_email = hello@clivern.com
@@ -7,13 +7,13 @@ license = MIT
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/norwik/oranda/
+url = https://github.com/norwik/floki/
 project_urls =
-    Documentation = https://github.com/norwik/oranda/
-    Source = https://github.com/norwik/oranda/
-    Changelog = https://github.com/norwik/oranda/blob/main/CHANGELOG.rst
-    Tracker = https://github.com/norwik/oranda/issues
-    Download = https://pypi.org/project/oranda/#files
+    Documentation = https://github.com/norwik/floki/
+    Source = https://github.com/norwik/floki/
+    Changelog = https://github.com/norwik/floki/blob/main/CHANGELOG.rst
+    Tracker = https://github.com/norwik/floki/issues
+    Download = https://pypi.org/project/floki/#files
 
 platforms = any
 
@@ -51,7 +51,7 @@ testing =
 
 [options.entry_points]
 console_scripts =
-    oranda = oranda.cli:main
+    floki = floki.cli:main
 
 [tool:pytest]
 addopts =
@@ -77,4 +77,4 @@ exclude =
 
 [pyscaffold]
 version = 4.1.1
-package = oranda
+package = floki
