--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     ansible-runner<=2.3.3
     Jinja2<=3.1.2
     prettytable<=3.8.0
+    PyYAML<=6.0
     importlib-metadata; python_version<"3.8"
 
 [options.packages.find]
