--- a/setup.cfg
+++ b/setup.cfg
@@ -32,10 +32,9 @@ package_dir =
 install_requires =
     click<=8.1.3
     ansible-runner<=2.3.3
-    yaspin<=2.3.0
     prettytable<=3.8.0
     PyYAML<=6.0
-    importlib-metadata; python_version<"3.8"
+    importlib-metadata<=6.7.0; python_version<"3.8"
 
 [options.packages.find]
 where = src
